# cogni-kit

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  PROJECT_CHECKLIST.md  README.md  README_IMPLEMENTATION.md  package.json  turbo.json
docs/: i18n-refactoring-summary.md
services/financial-data/: .gitignore  ENV_MANAGEMENT.md  README.md  dev.ts  main.py  openapi-python.yml  package.json  pyproject.toml  pytest.ini  run_tests.sh  start.sh
services/financial-data/app/: __init__.py  config.py  deps.py  main.py
services/financial-data/app/core/: __init__.py  cache.py  exceptions.py  logging_config.py  scheduler.py  schemas.py
services/financial-data/app/market_data/: __init__.py  config.py  router.py
services/financial-data/app/market_data/common/: __init__.py  enums.py  responses.py
services/financial-data/app/utils/: pinyin.py  trading_time.py
services/financial-data/tests/: README.md  REORGANIZATION_SUMMARY.md  conftest.py
services/financial-data/tests/api/: conftest.py  test_akshare_real.py  test_health.py  test_stock_basic.py  test_stock_batch.py  test_stock_cache.py
services/financial-data/tests/fixtures/: __init__.py  sample_data.py
services/financial-data/tests/helpers/: __init__.py  assertions.py
services/financial-data/tests/integration/: conftest.py  test_akshare.py  test_indicators.py
services/financial-data/tests/mocks/: __init__.py  akshare_mocks.py
services/financial-data/tests/unit/: conftest.py  test_akshare_client.py  test_akshare_service.py  test_calculator.py  test_indicators_service.py  test_pinyin.py
(+292 files in other folders)
