[project]
name = "financial-data-service"
version = "1.0.0"
description = "金融数据微服务 - 封装 AkShare 和技术指标计算"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.14",
    "fastapi>=0.128.0",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pypinyin>=0.55.0",
    "redis>=7.1.0",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "faker>=40.1.2",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
